fix horizontal scroll on right column

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -96,8 +96,10 @@ h2 {
   padding: 10px;
   background-color: #f1f1f1; /* Background color for visual purposes */
   overflow-y: hidden;
+  overflow-x: hidden;
   width: 30%; /* Full width of the right column */
   height: 100%;
+  box-sizing: border-box;
 }
 
 
